# SlasshyVault

./: .env.example  .gitattributes  .gitguardian.yaml  .gitignore  DESIGN.md  FRONTEND_REMINDER_FEATURE_PROMPT.md  PRODUCT.md  README.md  benchmark.cjs  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  test  test-compile.rs  test.cjs  test.js  test.ps1  test.rs  test2.rs  test3  test_script.js  tsconfig.json  vitest.config.ts
.github/workflows/: gh-pages.yml  nightly.yml  release.yml
.jules/: bolt.md  palette.md  sentinel.md
SlasshyVault-Backend/: .env.example  README.md  database.js  package-lock.json  package.json  redis.js  server.js  social.js  test-media-match.js
docs/: index.html
docs-vitepress/: index.md  package-lock.json  package.json
docs-vitepress/.vitepress/: config.js
docs-vitepress/guide/: api-keys.md  architecture.md  configuration.md  faq.md  getting-started.md  self-hosting.md  watch-together.md
docs-vitepress/legal/: privacy.md  terms.md
mpv-player/: slasshyvault-mpv.rar
public/: player.html  sync.html
scripts/: dev-nightly.mjs  sync-version.mjs
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: .env.example  Cargo.toml  build.rs  tauri.conf.json  tauri.conf.nightly.json  test_ps
src-tauri/mpv/: mpv.def  mpv.exp  mpv.lib
src-tauri/relay/: worker.js
src-tauri/src/: archive_manager.rs  cf_relay.rs  config.rs  database.rs  direct_link_manager.rs  download_manager.rs  gdrive.rs  http_client.rs  log_buffer.rs  main.rs  media_manager.rs  mpv_bundle.rs  mpv_ipc.rs  obfuscator.rs  remote_source.rs  remote_stream_proxy.rs  sentry.rs  social_auth.rs  stream_cache.rs  test_ps.rs  tmdb.rs  transcoder.rs  watch_together.rs  watch_together_mpv.rs  zip_manager.rs  zip_parser.rs  zip_stream_proxy.rs
src-tauri/src/mpv_controller/: communication.rs  mod.rs  player.rs  window.rs
src/components/: AnalyticsView.test.tsx  AnalyticsView.tsx  BetaConfirmDialog.tsx  CalendarView.tsx  CastMemberPanel.tsx  Clock.tsx  CommandPalette.tsx  ConfirmDialog.tsx  ContentDetailsModal.tsx  DdlMediaLibrary.test.tsx  DdlMediaLibrary.tsx  DeleteEpisodesModal.tsx  DeveloperConsole.test.tsx  DeveloperConsole.tsx  DirectLinksView.tsx  DownloadsView.tsx  DuplicateDetector.tsx  EpisodeBrowser.tsx  EpisodeItem.tsx  EpisodeSelector.tsx  EpisodeThumbnailImage.test.tsx  EpisodeThumbnailImage.tsx  EpisodeThumbnailImage.types.ts  ErrorBoundary.test.tsx  ErrorBoundary.tsx  FixMatchModal.tsx  FullHistoryView.test.tsx  FullHistoryView.tsx  GoogleDriveSettings.test.tsx  GoogleDriveSettings.tsx  GuidedTour.tsx  HistoryEventCard.tsx  ImdbDetailsPanel.tsx  KebabMenu.test.tsx  KebabMenu.tsx  LoginScreen.test.tsx  LoginScreen.tsx  MainAppTour.tsx  MarkCompleteDialog.test.tsx  MarkCompleteDialog.tsx  (+30 more)
src/components/AI/: AIChatView.tsx  TmdbDeepProfileCard.tsx  index.ts
src/components/Reminders/: CountdownTimer.test.tsx  CountdownTimer.tsx  CountdownTimer.utils.test.ts  CountdownTimer.utils.ts  ReminderEditor.tsx  RemindersList.tsx  RemindersView.tsx  TmdbDetailsModal.tsx  WatchlistEditor.tsx  WatchlistList.tsx  index.ts
src/components/RemoteSource/: RemoteCacheStatusBar.test.tsx  RemoteCacheStatusBar.tsx  RemoteCleanupDialog.test.tsx  RemoteCleanupDialog.tsx  RemoteMediaDetail.tsx  RemoteQualitySelector.tsx  RemoteSearchBar.test.tsx  RemoteSearchBar.tsx  RemoteSearchResults.test.tsx  RemoteSearchResults.tsx  RemoteSourceView.tsx  remote.types.ts
src/components/Social/: ActivityFeed.tsx  ChatWindow.tsx  FriendActivity.tsx  FriendRequests.tsx  FriendSearch.tsx  FriendsList.tsx  FriendsPanel.tsx  PrivacySettings.tsx  ProfileEditor.tsx  SocialSidebar.tsx  SocialView.tsx  UserProfileModal.tsx  index.ts
src/components/WatchTogether/: ParticipantList.test.tsx  ParticipantList.tsx  RoomLobby.tsx  SyncStatusIndicator.test.tsx  SyncStatusIndicator.tsx  WatchTogetherBanner.test.tsx  WatchTogetherBanner.tsx  WatchTogetherModal.tsx  index.ts
src/components/chat/: ChatBubble.tsx  ChatInput.tsx  ChatWindow.tsx  TypingIndicator.tsx  index.ts
src/components/ui/: button-variants.ts  checkbox.tsx  context-menu.tsx  dialog.tsx  slider.tsx  switch.tsx  tabs.tsx  toast.test.tsx  toast.tsx  toaster.test.tsx  toaster.tsx  use-toast.test.ts  use-toast.ts
src/config/: social.ts
src/hooks/: useAuth.ts
src/lib/: OptimizationContext.tsx  errorReporter.test.ts  errorReporter.ts  logger.test.ts  logger.ts  optimization.ts  utils.test.ts
src/services/: ai.ts  api.invoke.test.ts  api.test.ts  api.ts  cf-deploy.ts  gdrive.invoke.test.ts  gdrive.pure.test.ts  gdrive.test.ts  gdrive.ts  social.ts  zip.test.ts  zip.ts
src/utils/: format.test.ts  format.ts  pins.test.ts  pins.ts  playbackProgress.test.ts  playbackProgress.ts  smartCollections.ts  sorting.test.ts  sorting.ts  zip.test.ts  zip.ts  zipPlayback.test.ts  zipPlayback.ts
tests/: trigger-toast.js
