[package]
name = "streamvault"
version = "3.0.38"
description = "A Tauri Media Library App"
authors = ["Suman Patgiri"]
license = "MIT"
repository = "https://github.com/SlasshyOverhere/StreamVault"
edition = "2021"
default-run = "streamvault"
autobins = false

[build-dependencies]
tauri-build = { version = "1", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "1", features = [ "window-all", "updater", "system-tray", "shell-open", "dialog-open", "fs-all", "http-all", "protocol-asset", "notification"] }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-deep-link = "0.1"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
regex = "1.10"
walkdir = "2.4"
rayon = "1.10"
dashmap = "5.5"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
dirs = "5.0"
percent-encoding = "2.3"
rand = "0.8"
url = "2.5"
futures-util = "0.3"
notify-rust = "4"
oauth2 = "4.4"
base64 = "0.21"
open = { version = "5", features = ["shellexecute-on-windows"] }
dotenvy = "0.15"
tiny_http = "0.12"
lazy_static = "1.4"
tokio-tungstenite = { version = "0.21", features = ["native-tls", "handshake"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dunce = "1.0.5"
thiserror = "1.0"
flate2 = "1.0"
crc32fast = "1.4"
tar = "0.4"
rar-stream = { path = "vendor/rar-stream", features = ["async"] }
unrar = "0.5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Pipes", "Win32_System_Threading", "Win32_Security", "Win32_Graphics_Dwm"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
wan-test = []

[[bin]]
name = "streamvault"
path = "src/main.rs"

[[bin]]
name = "wt_tauri_wan_test"
path = "src/bin/wt_tauri_wan_test.rs"
required-features = ["wan-test"]

[[bin]]
name = "test_autoupdate"
path = "src/bin/test_autoupdate.rs"
