[package]
name = "slasshyvault"
version = "3.0.40"
description = "A Tauri Media Library App"
authors = ["Suman Patgiri"]
license = "MIT"
repository = "https://github.com/SlasshyOverhere/SlasshyVault"
edition = "2021"
default-run = "slasshyvault"
autobins = false

[build-dependencies]
tauri-build = { version = "1", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "1.8", features = [ "updater", "window-all", "system-tray", "shell-open", "dialog-open", "fs-read-file", "fs-write-file", "fs-read-dir", "fs-create-dir", "fs-remove-file", "fs-rename-file", "fs-exists", "http-request", "protocol-asset", "notification"] }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", rev = "1e407ed" }
tauri-plugin-deep-link = "0.1"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", rev = "1e407ed" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }
tokio = { version = "1", features = ["full"] }
regex = "1.10"
walkdir = "2.4"
rayon = "1.10"
dashmap = "5.5"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
dirs = "5.0"
percent-encoding = "2.3"
rand = "0.8.6"
url = "2.5"
futures-util = "0.3"
notify-rust = "4"
oauth2 = "5.0"
base64 = "0.22"
aes-gcm = "0.10"
open = { version = "5", features = ["shellexecute-on-windows"] }
dotenvy = "0.15"
tiny_http = "0.12"
http = "1"
lazy_static = "1.4"
tokio-tungstenite = { version = "0.24", features = ["native-tls", "handshake"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dunce = "1.0.5"
thiserror = "1.0"
flate2 = "1.0"
crc32fast = "1.4"
tar = "0.4"
rar-stream = { path = "vendor/rar-stream", features = ["async"] }
unrar = "0.5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Pipes", "Win32_System_Threading", "Win32_Security", "Win32_Graphics_Dwm"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
wan-test = []

[[bin]]
name = "slasshyvault"
path = "src/main.rs"

[[bin]]
name = "wt_tauri_wan_test"
path = "src/bin/wt_tauri_wan_test.rs"
required-features = ["wan-test"]

[[bin]]
name = "test_autoupdate"
path = "src/bin/test_autoupdate.rs"
